--- a/test.html
+++ b/test.html
@@ -312,7 +312,7 @@
                 <select ng-model="registerRole">
                     <option value="user">User</option>
                     <option value="farmer">Farmer</option>
-                    <!-- <option value="admin">Admin</option> -->
+                    <option value="admin">Admin</option>
                 </select>
                 <label>Name:</label>
                 <input type="text" placeholder="Name" ng-model="registerName">
